# _tlca

./: BLAS_LAPACK.md  C1210-N.1925-04-23.0.0.1.tlca.ipc  Cargo.toml  KS К-2776{KS}.2025-11-01.utca.ron  README.adoc  README.md  TAG.0.0.1.tlca.ipc  TAG.0.0.2.tlca.ipc  TEMP.ipc  TEMP.md  [H-242(Control).2023-10-24.0.0.1].fa.utca.ron  index.html  sw.js  tlca.js
.github/workflows/: links.yml  pages.yml  rust.yml  typos.yml
_input/: [Lobosphera-N.2025-04-24.0.0.1, Lobosphera-N.2025-04-24.0.0.2, ...].utca.parquet
_output/: C108, 519, H626, C1210, Lobosphera.md  MassMono.AND.md  TEMP.md  TypePositional.md  Бузулук{Experimental}.2026-01-19.tag.utca.ron  К-2233.2026-01-16.tag.ron  К-2233{Experimental}.2026-01-16.tag.utca.ron
_output/0/: EcnMono.md  MassMono.OR.md  SpeciesPositional.AND.md  SpeciesPositional.OR.md
_output/1/: EcnMonoOr.md  MassMonoOr.md  SpeciesPositionalOr.md  TypePositionalOr.md  UnsaturationMonoOr.md  _Metrics.html  _Metrics.md
_output/2/: Metrics.color.html  Metrics.color.md  Metrics.md  Result0.md  Result1.html  Result1.md
_output/3/: 0.py  1.py  README.html  README.md  x.md
_output/HelianthusAnnuus/: FA.html  FA.md  FA_Comparison.md  FA_MeanStandardDeviation.md  TAG.html  TAG.md  TAG_Comparison.md
_temp/: C108-N.2025-04-23.0.0.1.tlca.ipc  TEMP copy 2.adoc  TEMP copy 3.adoc  TEMP copy.adoc  TEMP.adoc  TEMP.py  Triacylglycerols.tlca.ipc
_temp/0/: 519-N.2025-04-23.0.0.1.tlca.ipc  TAG.0.0.3.tlca.ipc
_temp/1/: 1.tlca.ipc  2.tlca.ipc  3.tlca.ipc  4.tlca.ipc  5.tlca.ipc
_temp/2/: 1.2025-04-23.0.0.1.tlca.ipc  2.tlca.ipc  3.tlca.ipc  4.tlca.ipc  5.tlca.ipc
_temp/3/: display copy.rs  metrics copy.rs  statistics copy 3.rs  statistics copy.rs  statistics copyc.rs  table copy.rs
assets/: manifest.json
doc/: TEMP.adoc  metrics.md
doc/metrics/: bray_curtis_dissimilarity.md  canberra_distance.md  chebyshev_distance.md  cosine_distance.md  euclidean_distance.md  jensen_shannon_distance.md  manhattan_distance.md  minkowski_distance.md  pearson_distance.md  ruzicka_distance.md  spearman_distance.md  sørensen_dice_distance.md
doc/ru/Correlation/: PearsonCorrelation.md  SpearmanCorrelation.md
doc/ru/Similarity/BetweenTwoDiscreteProbabilityDistributions/: Bhattacharyya.md  Hellinger.md  JensenShannon.md
doc/ru/Similarity/BetweenTwoPoints/: Canberra.md  Chebyshev.md  Euclidean.md  Manhattan.md  Minkowski.md
doc/ru/Similarity/BetweenTwoSets/: Braun-Blanquet.md  Cosine.md  Jaccard.md  Kulczynski.md  Overlap.md  Sørensen.md
ftl/en/: fatty_acids.ftl  main.ext.ftl  main.ftl
src/: 1.md  const.rs  data.rs  lib.rs  localization.rs  main.rs  markdown.rs
src/_temp/: lib.1041.rs  lib.1046.rs
src/app/: data copy 2.rs  data copy.rs  data.rs  mod.rs
src/app/computers/: calculation.rs  display copy.rs  display.rs  format.rs  metrics.rs  mod.rs  moments.rs  statistics.rs  triacylglycerols.rs
src/app/computers/fatty_acids/: factors.rs  format copy.rs  format.rs  indices.rs  metrics copy 2.rs  metrics copy 3.rs  metrics.rs  mod.rs  table.rs
src/app/computers/triacylglycerols/: format.rs  metrics.rs  mod.rs  table.rs
src/app/panes/: behavior.rs  metrics.rs  mod.rs
src/app/panes/calculation/: metrics.rs  mod.rs  settings.rs  state.rs  statistics copy 2.rs  statistics.rs  table.rs
src/app/panes/fatty_acids/: factors.rs  indices.rs  metrics.rs  mod.rs  state.rs  table copy.rs  table.rs
src/app/panes/triacylglycerols/: metrics.rs  mod.rs  moments.rs  state.rs  table.rs
src/app/parameters/: composition.rs  mod.rs
src/app/states/: mod.rs  settings.rs
src/app/states/fatty_acids/: mod.rs  settings.rs
src/app/states/triacylglycerols/: mod.rs  settings.rs  windows.rs
src/app/widgets/: fatty_acid.rs  float.rs  github.rs  mean_and_standard_deviation.rs  mod.rs  presets.rs
src/export/: mod.rs  ron.rs
src/presets/: mod.rs
src/presets/_parquet/Microalgae/: C-108(-N).2025-04-23.tag.utca.ron  C-1210(-N).2025-04-24.fa.utca.ron  C-1210(-N).2025-04-24.tag.utca.ron  C-1540(-N).2025-04-24.fa.utca.ron  C-1540(-N).2025-04-24.tag.utca.ron  H-626(-N).2025-04-24.tag.utca.ron  P-519(-N).2025-04-23.tag.utca.ron
src/presets/ippras/: 519-N.2025-04-23.0.0.1.utca.ipc  C-108(-N).2025-04-23.tlca.parquet  C-1210(-N).2025-04-24.tlca.parquet  C108-N.2025-04-23.0.0.1.utca.ipc  C1210-N.2025-04-24.0.0.1.utca.ipc  C1210-N.2025-04-24.utca.parquet  H626-N.2025-04-24.utca.parquet  Lobosphera-N.2025-04-24.0.0.1.utca.ipc  P-519(-N).2025-04-23.tlca.parquet
src/presets/ippras/0/: 519-N.2025-04-23.0.0.1.utca.ipc  C108-N.2025-04-23.0.0.1.utca.ipc  C1210-N.2025-04-24.0.0.1.utca.ipc  Lobosphera-N.2025-04-24.0.0.1.utca.ipc  Lobosphera-N.2025-04-24.0.0.2.utca.ipc  Lobosphera-N.2025-04-24.0.0.3.utca.ipc
src/presets/ippras/1/: H626-N.2025-04-24.utca.ipc
src/presets/ippras/2/: C108-N.2025-04-23.utca.parquet  P519-N.2025-04-23.utca.parquet
src/presets/ippras/3/: C-1540(-N).2025-04-24.tlca.parquet  H-626(-N).2025-04-24.tlca.parquet
src/presets/ippras/Microalgae/: C-108(-N).2025-04-23.fa.utca.ron  C-108(-N).2025-04-23.tag.utca.ron  C-1210(-N).2025-04-24.tag.utca.ron  C-1540(-N).2025-04-24.tag.utca.ron  H-626(-N).2025-04-24.fa.utca.ron  H-626(-N).2025-04-24.tag.utca.ron  P-519(-N).2025-04-23.fa.utca.ron  P-519(-N).2025-04-23.tag.utca.ron
src/presets/ippras/Sidorov2014/: Euonymus Alatus.2014-06-19.fa.utca.ron  Euonymus Bungeanus.2014-06-19.fa.utca.ron  Euonymus Europaeus.2014-06-19.fa.utca.ron  Euonymus Hamiltonianus.2014-06-19.fa.utca.ron  Euonymus Latifolius.2014-06-19.fa.utca.ron  Euonymus Macropterus.2014-06-19.fa.utca.ron  Euonymus Maximowiczianus.2014-06-19.fa.utca.ron  Euonymus Pauciflorus.2014-06-19.fa.utca.ron  Euonymus Phellomanus.2014-06-19.fa.utca.ron  Euonymus Sachalinensis.2014-06-19.fa.utca.ron  Euonymus Sacrosanctus.2014-06-19.fa.utca.ron  Euonymus Semiexsertus.2014-06-19.fa.utca.ron  Euonymus Sieboldianus.2014-06-19.fa.utca.ron
src/presets/ippras/Sidorov2025/: Lunaria Rediviva(Fischer).2024-01-24.fa.utca.ron  Lunaria Rediviva(H_2SO_4+MeOH).2024-01-24.fa.utca.ron  (+2 more)
src/utils/: _polars.rs  hash.rs  markdown.rs  mod.rs  polars.rs  save.rs
