[package]
name = "tlca"
version = "0.3.1"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.32.3", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.32.3"
egui-phosphor = "0.10.0"
egui_dnd = "0.13.0"
egui_extras = { version = "0.32.3", features = ["datepicker", "serde", "svg"] }
egui_table = "0.4.0"
egui_tiles = "0.13.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
itertools = "0.14.0"
log = "0.4.28"
parking_lot = "0.12.4"
polars = { version = "0.51.0", default-features = false, features = [
    "array_arithmetic",
    "bitwise",
    "concat_str",
    "cov",
    "cum_agg",
    "diagonal_concat",
    "dtype-array",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt_no_tty",
    "lazy",
    "meta",
    "moment",
    "propagate_nans",
    "rank",
    "round_series",
    "row_hash",
    "strings",
    # "dtype-categorical",
    # "ndarray",
    # "parquet",
    # "ipc",
] }
polars-utils = { version = "0.51.0", features = ["nightly"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["macros"] }

egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", features = ["macros"] }
lipid = { git = "https://github.com/ippras/lipid" }
metadata = { git = "https://github.com/ippras/metadata", branch = "new", features = [
    "egui",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext" }
ron = "0.11.0"

# scirs2 = { version = "0.1.0-rc.1", default-features = false, features = [
#     "stats",
# ] }
# scirs2 = "0.1.0-rc.1"

# linfa = "0.7.1"
# linfa-hierarchical = "0.7.1"
# linfa-kernel = "0.7.1"
# re_ui = "0.22.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"

[features]
default = ["markdown"]
markdown = ["egui_ext/markdown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
